[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-similarity"
version = "0.1.0"
description = "Quantum SWAP-test similarity in superposition (vectors & text)."
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
  "qiskit>=0.46.0",
  "qiskit-aer>=0.13.3"
]

[project.scripts]
qsim = "quantum_similarity.cli:main"
